RESOLVED FIXED178026
RenderTable should not hold a collection of raw pointers to RenderTableCaption
https://bugs.webkit.org/show_bug.cgi?id=178026
Summary RenderTable should not hold a collection of raw pointers to RenderTableCaption
alan
Reported 2017-10-06 13:34:42 PDT
m_captions
Attachments
Patch (4.50 KB, patch)
2017-10-06 15:02 PDT, alan
no flags
Patch (4.54 KB, patch)
2017-10-06 20:44 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-06 13:35:07 PDT
alan
Comment 2 2017-10-06 15:02:02 PDT
WebKit Commit Bot
Comment 3 2017-10-06 16:21:28 PDT
Comment on attachment 323047 [details] Patch Rejecting attachment 323047 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 323047, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 223007 = 00ae28c596f06180bf84123a91d4676bda6d978f r223008 = 6397db63d35acfa4b7824f88da96ce7b299cb5aa r223009 = 291e10775f72a59d9e94f3b85b5422a38708848b Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: http://webkit-queues.webkit.org/results/4785218
alan
Comment 4 2017-10-06 20:44:45 PDT
WebKit Commit Bot
Comment 5 2017-10-06 21:15:06 PDT
Comment on attachment 323082 [details] Patch Clearing flags on attachment: 323082 Committed r223018: <http://trac.webkit.org/changeset/223018>
WebKit Commit Bot
Comment 6 2017-10-06 21:15:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.