RenderTable should not hold a collection of raw pointers to RenderTableCaption https://bugs.webkit.org/show_bug.cgi?id=178026 <rdar://problem/34863090>

Reviewed by Simon Fraser.

Similar to sections, RenderTable should not store captions as raw pointers. Their lifetimes are
not guaranteed to be sync with the RenderTable's.

Covered by existing tests.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::addCaption):
(WebCore::RenderTable::removeCaption):
(WebCore::RenderTable::addOverflowFromChildren):
* rendering/RenderTable.h:
* rendering/RenderTableCaption.cpp:
(WebCore::RenderTableCaption::insertedIntoTree):
(WebCore::RenderTableCaption::willBeRemovedFromTree):


Canonical link: https://commits.webkit.org/194289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223018 268f45cc-cd09-0410-ab3c-d52691b4dbfc